--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 # .gitignore
 # ==========
+#
+# Copying
+# -------
+#
+# Copyright (c) 2018 kado authors and contributors.
+#
+# This file is part of the *kado* project.
+#
+# kado is a free software project. You can redistribute it and/or
+# modify if under the terms of the MIT License.
+#
+# This software project is distributed *as is*, WITHOUT WARRANTY OF ANY
+# KIND; including but not limited to the WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE and NONINFRINGEMENT.
+#
+# You should have received a copy of the MIT License along with
+# kado. If not, see <http://opensource.org/licenses/MIT>.
+#
 
 # Editors
 # -------
