--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.isort]
 py_version = "36"
-known_third_party = ["pkg_resources", "semver", "setuptools", "xxhash"]
+known_third_party = ["pkg_resources", "semver", "xxhash"]
 atomic = true
 combine_as_imports = true
 combine_star = true
